Fixed alignment enough for demo

--- a/src/components/OfferBuilder/SelectItems/Items.module.sass
+++ b/src/components/OfferBuilder/SelectItems/Items.module.sass
@@ -13,9 +13,9 @@
         margin: 0
 
 .card
-    flex: 0 0 calc(63.333% - 32px)
-    width: calc(63.333% - 32px)
-    min-width: calc(63.333% - 32px)
+    flex: 0 0 calc(23.333% - 32px)
+    width: calc(23.333% - 32px)
+    min-width: 20ex
     margin: 32px 16px 0
     +x
         flex: 0 0 calc(63.333% - 20px)
