--- a/src/components/OfferBuilder/UploadDetails.module.sass
+++ b/src/components/OfferBuilder/UploadDetails.module.sass
@@ -74,6 +74,7 @@
     margin-bottom: 40px
     padding-bottom: 40px
     border-bottom: 1px solid $neutrals6
+    max-width: 30%
     +m
         margin-bottom: 32px
         padding-bottom: 32px
